# firmware-addon-dell

./: Makefile  Makefile-std  Makefile.am  PKG-INFO  TODO  configure.ac  firmware-addon-dell.spec  readme.txt  setup.cfg  setup.py  version.mk
doc/: bios.spec.in  dell-hardware.conf  dell-std-license.txt  firmware-addon-dell.conf  system_id2name.ini
firmware_addon_dell/: __init__.py  biosHdr.py  dellbios.py  extract_bios.py  extract_bios_blacklist.py  extract_common.py  svm.py
firmware_addon_dell/oldextract/: extract_bios.py
libexec/: extract_hdr_helper.sh  fakeroot.c  make_dell_mirror
pkg/: ab-host-debian.fwupdate.com-build.sh  firmware-addon-dell.spec  firmware-addon-dell.spec.in  mk-rel-rpm.sh  upload-rpm-hook
pkg/debian/: changelog  changelog.in  control  copyright  postinst  rules  watch
pkg/debian/patches/: 00-Makefile.patch  01-getSystemId-path.patch  02-usr-bin-empty.patch
pymod/: HelperXml.py  biosHdr.py  dellbios.py  svm.py
test/: TestLib.py  testAll.py  testBiosHdr.py  testBiosInventory.py  testHelperXml.py  testSvm.py
yum-plugin/: dellsysidplugin.py
